fixed spacing on mobile version of the tracks page

--- a/src/components/TracksPage/TracksPage.scss
+++ b/src/components/TracksPage/TracksPage.scss
@@ -24,10 +24,9 @@
 .tracksText {
 	color: white;
 	line-height: 2em;
-	margin: 0 auto;
-	width: 80%;
+	margin: 0 15px;
 	padding: 2em 0 0 0;
-	text-align: center;
+	text-align: left;
 }
 
 @media (min-width: 768px) {
@@ -39,6 +38,8 @@
 	.tracksText {
 		width: 55%;
 		padding: 3em 0 0 0;
+		margin: 0 auto;
+		text-align: center;
 	}
 
 }
